to navigaiton markup added

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
-- title: 'title-name'
-  description: 'navigation description'
-  url: '/navigation url/'
-  icon: 'icon-name'
-- title: 'title-name'
-  description: 'navigation description'
-  url: '/navigation url/'
-  icon: 'icon-name'
+- title: 'Главная'
+  url: '/index.html'
+- title: 'Перечень услуг'
+  url: '/services.html'
+- title: 'Контакты'
+  url: '/contacts.html'
+- title: 'Онлайн-заявка'
+  url: '/orders.html'
