--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: site title
+title: 'Срочный выкуп авто в Москве' 
 email: site email
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/autoorder/"
+baseurl: "/jekyll-for-psd-to-html/"
 url: "./" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
