--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/jekyll-for-psd-to-html/"
+baseurl: "/autoorder/"
 url: "./" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
